@@ -10,8 +10,6 @@ matrix:
     env: TOXENV=py26
   - python: "2.7"
     env: TOXENV=py27
-  - python: "3.2"
-    env: TOXENV=py32
   - python: "3.3"
     env: TOXENV=py33
   - python: "3.4"
@@ -25,9 +23,6 @@ matrix:
   - python: "2.7"
     env:
       CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py27
-  - python: "3.2"
-    env:
-      CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py32
   - python: "3.3"
     env:
       CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py33
@@ -59,7 +54,6 @@ matrix:
     env: TOXENV=py27
   - env: CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py26
   - env: CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py27
-  - env: CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py32
   - env: CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py33
   - env: CRYPTOGRAPHY_GIT_MASTER=true TOXENV=py34
   - env: CRYPTOGRAPHY_GIT_MASTER=true TOXENV=pypy
