@@ -1,3 +1,10 @@
+2015-05-02  Jim Shaver <dcypherd@gmail.com>
+
+	* .travis.yml, setup.py, tox.ini: Removed support for Python 3.2.
+	  This version is rarely used and is now depricated by a major
+	  dependency of pyOpenSSL(cryptography). Affected users should upgrade
+	  to Python 3.3+.
+
 2015-04-15  Paul Kehrer <paul.l.kehrer@gmail.com>
 
 	* OpenSSL/crypto.py, OpenSSL/test/test_crypto.py: Switch to utf8string
